update: newページ 感情選択のタブを大きく変更

--- a/app/views/memos/_tabs.html.erb
+++ b/app/views/memos/_tabs.html.erb
@@ -1,5 +1,5 @@
 <!-- タブ：感情一覧 -->
-<div role="tablist" class="tabs tabs-lifted">
+<div role="tablist" class="tabs tabs-lifted tabs-lg ">
   <% emotions = { 
     happy: t('memos._tabs.happy'),
     angry: t('memos._tabs.angry'),
