--- a/app/views/memos/_tabs.html.erb
+++ b/app/views/memos/_tabs.html.erb
@@ -1,18 +1,20 @@
-<!-- タブ：感情一覧 -->
-<div role="tablist" class="tabs tabs-lifted tabs-lg ">
-  <% emotions = { 
-    happy: t('memos._tabs.happy'),
-    angry: t('memos._tabs.angry'),
-    sad: t('memos._tabs.sad'),
-    funny: t('memos._tabs.funny'),
-    other: t('memos._tabs.other') 
-    } %>
+<div class="my-6">
+  <!-- タブ：感情一覧 -->
+  <div role="tablist" class="tabs tabs-lifted tabs-lg ">
+    <% emotions = { 
+      happy: t('memos._tabs.happy'),
+      angry: t('memos._tabs.angry'),
+      sad: t('memos._tabs.sad'),
+      funny: t('memos._tabs.funny'),
+      other: t('memos._tabs.other') 
+      } %>
 
-  <!-- 各感情のタブ -->
-  <% emotions.each do |emotion, label| %>
-    <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="<%= label %>" <%= 'checked="checked"' if emotion == :happy %> />
-    <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
-      <%= render "emotion_form", emotion: emotion %>
-    </div>
-  <% end %>
+    <!-- 各感情のタブ -->
+    <% emotions.each do |emotion, label| %>
+      <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="<%= label %>" <%= 'checked="checked"' if emotion == :happy %> />
+      <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
+        <%= render "emotion_form", emotion: emotion %>
+      </div>
+    <% end %>
+  </div>
 </div>
