update: メモ確認ページ　レスポンシブ対応

--- a/app/views/memos/_form.html.erb
+++ b/app/views/memos/_form.html.erb
@@ -43,7 +43,7 @@
     <!-- なぜをもっと深掘り -->
     <div class="mb-16">
       <label class="block">
-        <%= t('memos._form.why_more') %>(Why_more)(*)
+        <%= t('memos._form.why_more') %>(*)
       </label>
       <%= key.text_area 'why_more', value: parsed_content['why_more'], placeholder: @memo.placeholder_for_all(:why_more, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
     </div>
