--- a/app/views/memos/_memo_content.html.erb
+++ b/app/views/memos/_memo_content.html.erb
@@ -1,7 +1,6 @@
 <!-- 呼び出し元 memos/show.html.erb, memos/confirm.html.erb -->
 
-<div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
-  <br>
+<div class="bg-white rounded-lg p-6"> <!-- 角丸と背景色 -->
   <br>
   <div class="badge badge-error badge-outline badge-lg w-full max-w-xs">
   <%= emotion_label(@memo.emotion) %>
