--- a/app/views/memos/_memo_content.html.erb
+++ b/app/views/memos/_memo_content.html.erb
@@ -1,6 +1,6 @@
 <!-- 呼び出し元 memos/show.html.erb, memos/confirm.html.erb -->
 
-<div class="badge badge-error badge-outline badge-lg w-full max-w-xs">
+<div class="badge badge-error badge-outline badge-lg w-full max-w-xs mt-8">
   <%= emotion_label(@memo.emotion) %>
 </div>
 <%= f.hidden_field :emotion, value: @memo.emotion %>
