--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -3,7 +3,7 @@
     <div class="mx-auto max-w-2xl text-center">
       <% content_for :title, JSON.parse(@memo.memo_content)["what"] + t('.detail') %>
 
-      <h1 class="text-3xl mb-8"><%= "#{JSON.parse(@memo.memo_content)["what"]}" %><%= t('.detail') %></h1>
+      <h1 class="text-3xl py-14"><%= "#{JSON.parse(@memo.memo_content)["what"]}" %><%= t('.detail') %></h1>
       <div class="flex justify-end">
         <!-- アイコン：編集 -->
         <%= link_to edit_memo_path(@memo), class: "mx-2" do %>
