style: 入力フォーム スタイル変更

--- a/app/views/memos/_form.html.erb
+++ b/app/views/memos/_form.html.erb
@@ -16,7 +16,7 @@
   <%= f.hidden_field :emotion, value: @memo.emotion %> <!-- フォームに感情を隠しフィールドで渡す -->
 
   <!-- いつ -->
-  <div class="my-16">
+  <div class="my-8 sm:my-16">
     <label class="block">
       <%= t('memos._form.when') %>（When）
     </label>
@@ -25,7 +25,7 @@
 
   <%= f.fields_for :memo_content do |key| %>
     <!-- 何 -->
-    <div class="mb-16">
+    <div class="my-8 sm:my-16">
       <label class="block">
         <%= t('memos._form.what') %>（What）(*)
       </label>
@@ -33,7 +33,7 @@
     </div>
 
     <!-- なぜ -->
-    <div class="mb-16">
+    <div class="my-8 sm:my-16">
       <label class="block">
         <%= t('memos._form.why') %>(Why)(*)
       </label>
@@ -41,7 +41,7 @@
     </div>
 
     <!-- なぜをもっと深掘り -->
-    <div class="mb-16">
+    <div class="my-8 sm:my-16">
       <label class="block">
         <%= t('memos._form.why_more') %>(*)
       </label>
@@ -49,7 +49,7 @@
     </div>
 
     <!-- どのように -->
-    <div class="mb-16">
+    <div class="my-8 sm:my-16">
       <label class="block">
         <%= t('memos._form.how') %>(How)(*)
       </label>
@@ -57,7 +57,7 @@
     </div>
 
     <!-- まとめ・気付き -->
-    <div class="mb-16">
+    <div class="my-8 sm:my-16">
       <label class="block">
         <%= t('memos._form.summary') %>(*)
       </label>
