--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -1,67 +1,77 @@
-<div class="py-24 sm:py-32">
-  <div class="mx-auto max-w-7xl px-6 lg:px-8">
+<div class="mb-20">
+  <div class="mx-auto max-w-7xl px-6 md:px-36">
+
     <div class="mx-auto max-w-2xl text-center">
       <% content_for :title, t('.title') %>
-
       <!-- メモ一覧 -->
-      <h1 class="text-3xl"><%= t('.title') %></h1><br>
+      <h1 class="text-3xl py-14"><%= t('.title') %></h1>
+
+      <!-- メモが存在する場合 -->
       <% if @memos.present? %>
-        <div class="border p-3 mb-10">
-          <!-- 最終更新のメモ -->
-          <%= t('.last_update_memo') %>
-          <br><br>
-          <%= @latest_memo.date %><br>
-          <div class="text-xl">
+        <div class="border bg-white mb-10">
+          <!-- 「最終更新のメモ」 -->
+          <div class="block font-bold bg-gray-200 py-4 flex-auto">
+              <%= t('.last_update_memo') %>
+          </div>
+          <!-- 日付 -->
+          <div class="mt-6">
+            <%= @latest_memo.date %>
+          </div>
+          <div class="mb-6 mx-7">
             <%= JSON.parse(@latest_memo.memo_content)["what"] %>
-          </div><br>
-            <!-- 「まとめ・気付き」 -->
-            <%= t('.summary') %>
-          <%= simple_format(JSON.parse(@latest_memo.memo_content)["summary"]) %> 
+          </div>
+          <!-- 「まとめ・気付き」 -->
+          <%= t('.summary') %>
+          <div class="mb-8 mx-7">
+            <%= simple_format(JSON.parse(@latest_memo.memo_content)["summary"]) %> 
+          </div>
         </div>
-
-        <br><br>
         <%= render "count_memos" %> <!-- メモ総数と連続記録日数 -->
+    </div>
 
-        <!-- メモ一覧 -->
-        <% @memos.each do |memo| %>
-          <div id="memo-<%= memo.id %>">
-            <div class="border p-3">
-              <div class="flex justify-start">
-                <%= memo.date || t('.no_date') %>
-              </div>
-              <!-- タイトル（Whatの内容）-->
-              <%= link_to JSON.parse(memo.memo_content)["what"], memo_path(memo), id: memo.id, class: "btn glass btn-wide btn-lg" %>
+    <!-- メモ一覧 -->
+    <% @memos.each do |memo| %>
+      <div id="memo-<%= memo.id %>">
+        <%= link_to memo_path(memo), class: "w-full block" do %>
+          <div class="border flex w-full items-center hover:bg-gray-200 relative">
+            <!-- 日付 -->
+            <div class="flex justify-start ml-4">
+              <%= memo.date || t('.no_date') %>
+            </div>
 
-              <div class="flex justify-end">
-                <!-- アイコン：お気に入りの☆ -->
-                <%= render "shared/favorite_star", memo: memo %>
+            <!-- Whatの内容 -->
+            <div class="md:text-lg font-bold text-center mb-6 w-3/5 mx-auto truncate">
+              <%= JSON.parse(memo.memo_content)["what"] %>
+            </div>
 
-                <!-- アイコン：編集 -->
-                <%= link_to edit_memo_path(memo), class: "mx-2" do %>
-                  <i class="fa-solid fa-pen-to-square"></i>
-                <% end %>
+            <!-- アイコン部分 -->
+            <div class="flex absolute right-0 text-lg">
+              <!-- アイコン：お気に入りの☆ -->
+              <%= render "shared/favorite_star", memo: memo %>
 
-                <!-- アイコン：削除 -->
-                <%= link_to memo_path(memo), data: { turbo_method: :delete, turbo_confirm: t('.caution') }, class: "mx-2" do %>
-                  <i class="fa-solid fa-trash"></i>
-                <% end %>
-              </div>
+              <!-- アイコン：削除 -->
+              <%= link_to memo_path(memo), data: { turbo_method: :delete, turbo_confirm: t('.caution') }, class: "mx-2 mr-4" do %>
+                <i class="fa-solid fa-trash"></i>
+              <% end %>
             </div>
           </div>
-        <% end %><br><br>
-        <%= paginate @memos %> <!-- ページネーション -->
+        <% end %>
+      </div>
+    <% end %>
+
+    <!-- ページネーション -->
+    <div class="pt-8 text-center mx-auto">
+      <%= paginate @memos %>
+    </div>
 
       <!-- メモがない場合 -->
       <% else %>
-      <%= render "count_memos" %> <!-- メモ総数と連続記録日数 -->
-        <%= simple_format t('.no_memo') %><br>
-        <%= link_to t('.create_new'), new_memo_path, class: "btn" %>
+        <%= render "count_memos" %> <!-- メモ総数と連続記録日数 -->
+        <div class="py-8">
+          <%= simple_format t('.no_memo') %> <!-- 「記録がありませんー」 -->
+        </div>
+        <%= link_to t('.create_new'), new_memo_path, class: "btn btn-active mb-10" %> <!-- 「メモを作成する」 -->
       <% end %>
 
-
-
-      
-      <br><br>
-    </div>
   </div>
 </div>
