--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -5,4 +5,4 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<span class="page gap, join-item btn"><%= t('views.pagination.truncate').html_safe %></span>
+<span class="page gap, join-item btn btn-xs md:btn-sm lg:btn-md"><%= t('views.pagination.truncate').html_safe %></span>
