--- a/app/views/memo_favorites/index.html.erb
+++ b/app/views/memo_favorites/index.html.erb
@@ -1,12 +1,27 @@
-<br><h1 class=text-3xl>お気に入り</h1><br>
-<% if @memo_favorites.empty? %> <!-- お気に入りがない場合 -->
-  お気に入りのメモはまだありません。<br>
-  お気に入り登録をしてみましょう！<br><br>
-  <%= link_to "記録一覧", memos_path, class: "btn" %>
-<% else %> <!-- お気に入りがある場合 -->
-  <% @memo_favorites.each do |mf| %>
-    <%= render "memo_favorite", memo: mf.memo %>
-  <% end %>
-  <br><br>
-  <%= paginate @memo_favorites %> <!-- ページネーション -->
-<% end %>
+<div class="mb-20">
+  <div class="mx-auto max-w-7xl px-6 md:px-36">
+    <div class="mx-auto max-w-2xl text-center">
+      <% content_for :title, t('.title') %>
+      <!-- メモ一覧 -->
+      <h1 class="text-3xl py-14"><%= t('.title') %></h1>
+
+      <!-- お気に入りがない場合 -->
+      <% if @memo_favorites.empty? %>
+        <div class="pb-12">
+          <!-- 「お気に入りのメモはまだありません。」 -->
+          <%= t('.no_favorites') %>
+        </div>
+        <%= link_to t('.memo_list'), memos_path, class: "btn btn-active mb-14" %>
+      <!-- お気に入りがある場合 -->
+      <% else %>
+        <% @memo_favorites.each do |mf| %>
+          <%= render "memo_favorite", memo: mf.memo %>
+        <% end %>
+        <!-- ページネーション -->
+        <div class="pt-8 text-center">
+          <%= paginate @memo_favorites %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
