update: プライバシーポリシー・利用規約　レスポンシブ対応

--- a/app/views/shared/privacy_policy.html.erb
+++ b/app/views/shared/privacy_policy.html.erb
@@ -1,48 +1,66 @@
-<div class="py-24 sm:py-32">
-  <div class="mx-auto max-w-4xl">
-プライバシーポリシー<br><br>
+<div class="mb-20">
+  <div class="mx-auto max-w-7xl px-9 text-sm md:text-base">
+    <div class="mx-auto max-w-2xl">
+      <h1 class="text-3xl py-20 mt-56 text-center">プライバシーポリシー</h1>
 
-お客様から取得する情報<br>
-  本アプリは、お客様から以下の情報を取得します。<br>
-    ・氏名(ニックネームやペンネームも含む)<br>
-    ・メールアドレス<br>
-    ・外部サービスでお客様が利用するID、その他外部サービスのプライバシー設定によりお客様が連携先に開示を認めた情報<br>
-    ・Cookie(クッキー)を用いて生成された識別情報<br><br>
+      <h2 class="text-lg font-semibold mb-3 text-left">お客様から取得する情報</h2>
+      <p>本アプリは、お客様から以下の情報を取得します。</p>
+      <ul class="list-disc pl-5 mb-10">
+        <li>氏名(ニックネームやペンネームも含む)</li>
+        <li>メールアドレス</li>
+        <li>外部サービスでお客様が利用するID、その他外部サービスのプライバシー設定によりお客様が連携先に開示を認めた情報</li>
+        <li>Cookie(クッキー)を用いて生成された識別情報</li>
+      </ul>
 
-お客様の情報を利用する目的<br>
-  本アプリは、お客様から取得した情報を、以下の目的のために利用します。<br><br>
-    ・本アプリサービスに関する登録の受付、お客様の本人確認、認証のため<br>
-    ・お客様の本アプリサービスの利用履歴を管理するため<br>
-    ・本アプリサービスにおけるお客様の行動履歴を分析し、本アプリサービスの維持改善に役立てるため<br>
-    ・本アプリのサービスに関するご案内をするため<br>
-    ・お客様からのお問い合わせに対応するため<br>
-    ・本アプリの規約や法令に違反する行為に対応するため<br>
-    ・本アプリサービスの変更、提供中止、終了、契約解除をご連絡するため<br>
-    ・本アプリ規約の変更等を通知するため<br>
-    ・その他、本アプリサービスの提供、維持、保護及び改善のため<br><br>
+      <h2 class="text-lg font-semibold mb-3 text-left">お客様の情報を利用する目的</h2>
+      <p>本アプリは、お客様から取得した情報を、以下の目的のために利用します。</p>
+      <ul class="list-disc pl-5 mb-10">
+        <li>本アプリサービスに関する登録の受付、お客様の本人確認、認証のため</li>
+        <li>お客様の本アプリサービスの利用履歴を管理するため</li>
+        <li>本アプリサービスにおけるお客様の行動履歴を分析し、本アプリサービスの維持改善に役立てるため</li>
+        <li>本アプリのサービスに関するご案内をするため</li>
+        <li>お客様からのお問い合わせに対応するため</li>
+        <li>本アプリの規約や法令に違反する行為に対応するため</li>
+        <li>本アプリサービスの変更、提供中止、終了、契約解除をご連絡するため</li>
+        <li>本アプリ規約の変更等を通知するため</li>
+        <li>その他、本アプリサービスの提供、維持、保護及び改善のため</li>
+      </ul>
 
-安全管理のために講じた措置<br>
-  ・本アプリが、お客様から取得した情報に関する安全措置につきましては、末尾記載のお問い合わせ先にご連絡をいただきましたら、法令の定めに従い個別にご回答させていただきます。<br><br>
+      <h2 class="text-lg font-semibold mb-3 text-left">安全管理のために講じた措置</h2>
+        <ul class="list-disc pl-5 mb-10">
+          <li>本アプリが、お客様から取得した情報に関する安全措置につきましては、
+            末尾記載のお問い合わせ先にご連絡をいただきましたら、法令の定めに従い個別にご回答させていただきます。</li>
+        </ul>
 
-第三者提供<br>
-  本アプリは、お客様から取得する情報のうち、個人データ（個人情報保護法第１６条第３項）に該当するものついては、あらかじめお客様の同意を得ずに、第三者（日本国外にある者を含みます。）に提供しません。<br>
-  但し、次の場合は除きます。<br>
-    ・個人データの取扱いを外部に委託する場合<br>
-    ・本アプリや本アプリサービスが買収された場合<br>
-    ・事業パートナーと共同利用する場合（具体的な共同利用がある場合は、その内容を別途公表します。）<br>
-    ・その他、法律によって合法的に第三者提供が許されている場合<br><br>
+      <h2 class="text-lg font-semibold mb-3 text-left">第三者提供</h2>
+      <p>本アプリは、お客様から取得する情報のうち、個人データ（個人情報保護法第１６条第３項）に
+        該当するものついては、あらかじめお客様の同意を得ずに、第三者（日本国外にある者を含みます。）に提供しません。</p>
+      <ul class="list-disc pl-5 mb-10">
+        <li>個人データの取扱いを外部に委託する場合</li>
+        <li>本アプリや本アプリサービスが買収された場合</li>
+        <li>事業パートナーと共同利用する場合（具体的な共同利用がある場合は、その内容を別途公表します。）</li>
+        <li>その他、法律によって合法的に第三者提供が許されている場合</li>
+      </ul>
 
-アクセス解析ツール<br>
-  本アプリは、お客様のアクセス解析のために、「Googleアナリティクス」を利用しています。Googleアナリティクスは、トラフィックデータの収集のためにCookieを使用しています。トラフィックデータは匿名で収集されており、個人を特定するものではありません。Cookieを無効にすれば、これらの情報の収集を拒否することができます。詳しくはお使いのブラウザの設定をご確認ください。Googleアナリティクスについて、詳しくは以下からご確認ください。<br>
-    https://marketingplatform.google.com/about/analytics/terms/jp/<br><br>
+      <h2 class="text-lg font-semibold mb-3 text-left">アクセス解析ツール</h2>
+        <p class="mb-10">本アプリは、お客様のアクセス解析のために、「Googleアナリティクス」を利用しています。
+          Googleアナリティクスは、トラフィックデータの収集のためにCookieを使用しています。
+          トラフィックデータは匿名で収集されており、個人を特定するものではありません。Cookieを無効にすれば、これらの情報の収集を拒否する
+          ことができます。詳しくはお使いのブラウザの設定をご確認ください。Googleアナリティクスについて、詳しくは
+          <%= link_to "Google アナリティクスの利用規約", "https://marketingplatform.google.com/about/analytics/terms/jp/", class: "link link-primary link-hover" %>
+          からご確認ください。
+        </p>
 
-プライバシーポリシーの変更<br>
-  本アプリは、必要に応じて、このプライバシーポリシーの内容を変更します。この場合、変更後のプライバシーポリシーの施行時期と内容を適切な方法により周知または通知します。<br><br>
+      <h2 class="text-lg font-semibold mb-3 text-left">プライバシーポリシーの変更</h2>
+      <p class="mb-10">本アプリは、必要に応じて、このプライバシーポリシーの内容を変更します。
+        この場合、変更後のプライバシーポリシーの施行時期と内容を適切な方法により周知または通知します。<p>
 
-お問い合わせ<br>
-  お客様の情報の開示、情報の訂正、利用停止、削除をご希望の場合は、お問い合わせフォームよりご連絡ください。<br>
-  この場合、必ず、運転免許証のご提示等運営者が指定する方法により、ご本人からのご請求であることの確認をさせていただきます。なお、情報の開示請求については、開示の有無に関わらず、ご申請時に一件あたり1,000円の事務手数料を申し受けます。<br><br>
+      <h2 class="text-lg font-semibold mb-3 text-left">お問い合わせ</h2>
+      <p>お客様の情報の開示、情報の訂正、利用停止、削除をご希望の場合は、お問い合わせフォームよりご連絡ください。<p>
+      <p class="mb-10">この場合、必ず、運転免許証のご提示等運営者が指定する方法により、ご本人からのご請求であることの確認をさせていただきます。
+        なお、情報の開示請求については、開示の有無に関わらず、ご申請時に一件あたり1,000円の事務手数料を申し受けます。<p>
 
-2024年12月27日制定
+      <p class="text-right">2024年12月27日制定</p>
+    </div>
   </div>
 </div>
