--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,12 +38,15 @@
     <%= display_meta_tags(default_meta_tags) %>
   </head>
 
-  <body class="bg-base-200">
-    <% if logged_in? %>
-      <%= render "shared/header" %>
-    <% else %>
-      <%= render "shared/header_before_login" %>
-    <% end %>
+  <body class="bg-base-200 flex flex-col min-h-screen">
+    <header class="sticky top-0 left-0 right-0 w-full shadow-md z-10">
+      <% if logged_in? %>
+        <%= render "shared/header" %>
+      <% else %>
+        <%= render "shared/header_before_login" %>
+      <% end %>
+    </header>
+    <div class="flex-grow">
     <%= render "shared/flash_message" %>
     <main>
       <%= yield %>
