--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,67 +1,63 @@
-<% cache 'header' do %>
-  <header class="fixed top-0 left-0 w-full z-10">
-    <div class="navbar bg-base-100 h-16 flex justify-between shadow fixed top-0 left-0 w-full z-10">
+<div class="navbar bg-base-100 h-16 flex justify-between shadow">
 
-      <!-- 左側要素 -->
-      <div class="flex items-center">
-        <!-- ロゴ -->
-        <%= link_to '/' do %>
-          <%= image_tag 'logo2.png', alt: "Memo Sprout logo", class: "h-14 py-2 w-auto object-contain" %>
-        <% end %>
-        <!-- 記録して振り返り、思考を育てる（モバイル非表示） -->
-        <h2 class="text-base leading-8 text-gray-900 whitespace-nowrap hidden md:block md:pl-4">
-          - <%= t('shared._header.catchphrase') %> -
-        </h2>
-      </div>
+  <!-- 左側要素 -->
+  <div class="flex items-center">
+    <!-- ロゴ -->
+    <%= link_to '/' do %>
+      <%= image_tag 'logo3.jpg', alt: "Memo Sprout logo", class: "h-14 py-2 w-auto object-contain" %>
+    <% end %>
+    <!-- 記録して振り返り、思考を育てる（モバイル非表示） -->
+    <h2 class="text-base leading-8 text-gray-900 whitespace-nowrap hidden md:block md:pl-4">
+      - <%= t('shared._header.catchphrase') %> -
+    </h2>
+  </div>
 
-      <!-- 右側要素 -->
-      <div class="flex items-stretch justify-end min-w-0">
-        <!-- 「ログイン中」もしくは「ゲストログイン中」の画像 -->
-        <div class="text-error text-sm flex items-center">
-          <img src="<%= asset_path(logged_in? && current_user.email.start_with?("guest_") ? 'guest_login.png' : 'login.png') %>" 
-              alt="<%= logged_in? && current_user.email.start_with?("guest_") ? 'ゲストログイン中' : 'ログイン中' %>" 
-              class="h-10 w-auto object-contain flex-shrink-0" />
-        </div>
-        <!-- メモ作成アイコン（＋） -->
-        <%= link_to new_memo_path, class: "btn btn-ghost rounded-btn px-3 md:px-4" do %>
-          <i class="fa-solid fa-plus"></i>
-          <p class="hidden sm:block">
-            <%= t('shared._header.create_memo') %>
-          </p>
-        <% end %>
-        <!-- ハンバーガーメニュー -->
-        <div class="dropdown dropdown-end">
-          <div tabindex="0" role="button" class="btn btn-ghost rounded-btn px-2 md:px-4 text-lg">
-            <i class="fa-solid fa-bars"></i>
-          </div>
-          <ul tabindex="0" class="menu dropdown-content bg-base-100 rounded-box z-[1] mt-4 w-52 p-2 shadow">
-            <li>
-              <!-- メモ一覧 -->
-              <%= link_to t('shared._header.memo_list'), memos_path %>
-            </li>
-            <li>
-              <!-- 使い方 -->
-              <a onclick="my_modal_3.showModal()"><%= t('shared._header.how_to_use') %></a> <!-- モーダルを開くリンク -->
-            </li>
-            <li>
-              <!-- お気に入り -->
-              <%= link_to t('shared._header.favorite'), memo_favorites_path %>
-            </li>
-            <li>
-              <%= link_to "https://twitter.com/intent/tweet?text=#{CGI.escape("一言ずつの入力で出来事を掘り下げてみよう🌱\n#{root_url}\n#MemoSprout")}", target: "_blank", rel: "noopener noreferrer" do %>
-                <!-- アプリをシェア -->
-                <%= t('shared._header_before_login.share_app') %><i class="fa-brands fa-x-twitter"></i>
-              <% end %>
-            </li>
-            <li>
-              <!-- ログアウト -->
-              <%= link_to t('shared._header.logout'), logout_path, data: { turbo_method: :delete } %>
-            </li>
-          </ul>
-        </div>
-      </div>
-
+  <!-- 右側要素 -->
+  <div class="flex items-stretch justify-end min-w-0">
+    <!-- 「ログイン中」もしくは「ゲストログイン中」の画像 -->
+    <div class="text-error text-sm flex items-center">
+      <img src="<%= asset_path(logged_in? && current_user.email.start_with?("guest_") ? 'guest_login.png' : 'login.png') %>" 
+          alt="<%= logged_in? && current_user.email.start_with?("guest_") ? 'ゲストログイン中' : 'ログイン中' %>" 
+          class="h-10 w-auto object-contain flex-shrink-0" />
     </div>
-    <%= render "memos/example" %> <!-- 使い方モーダル -->
-  </header>
-<% end %>
+    <!-- メモ作成アイコン（＋） -->
+    <%= link_to new_memo_path, class: "btn btn-ghost rounded-btn px-3 md:px-4" do %>
+      <i class="fa-solid fa-plus"></i>
+      <p class="hidden sm:block">
+        <%= t('shared._header.create_memo') %>
+      </p>
+    <% end %>
+    <!-- ハンバーガーメニュー -->
+    <div class="dropdown dropdown-end">
+      <div tabindex="0" role="button" class="btn btn-ghost rounded-btn px-2 md:px-4 text-lg">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+      <ul tabindex="0" class="menu dropdown-content bg-base-100 rounded-box z-[1] mt-4 w-52 p-2 shadow">
+        <li>
+          <!-- メモ一覧 -->
+          <%= link_to t('shared._header.memo_list'), memos_path %>
+        </li>
+        <li>
+          <!-- 使い方 -->
+          <a onclick="my_modal_3.showModal()"><%= t('shared._header.how_to_use') %></a> <!-- モーダルを開くリンク -->
+        </li>
+        <li>
+          <!-- お気に入り -->
+          <%= link_to t('shared._header.favorite'), memo_favorites_path %>
+        </li>
+        <li>
+          <%= link_to "https://twitter.com/intent/tweet?text=#{CGI.escape("一言ずつの入力で出来事を掘り下げてみよう🌱\n#{root_url}\n#MemoSprout")}", target: "_blank", rel: "noopener noreferrer" do %>
+            <!-- アプリをシェア -->
+            <%= t('shared._header_before_login.share_app') %><i class="fa-brands fa-x-twitter"></i>
+          <% end %>
+        </li>
+        <li>
+          <!-- ログアウト -->
+          <%= link_to t('shared._header.logout'), logout_path, data: { turbo_method: :delete } %>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+</div>
+<%= render "memos/example" %> <!-- 使い方モーダル -->
