--- a/app/views/shared/terms_of_service.html.erb
+++ b/app/views/shared/terms_of_service.html.erb
@@ -1,7 +1,7 @@
 <div class="mb-20">
   <div class="mx-auto max-w-7xl px-9 text-sm md:text-base">
     <div class="mx-auto max-w-2xl">
-      <h1 class="text-3xl py-20 mt-56 text-center">利用規約</h1>
+      <h1 class="text-3xl py-20 text-center">利用規約</h1>
 
       <h2 class="text-lg font-semibold mb-3 text-left">本規約について</h2>
       <p class="mb-10">この利用規約（以下，「本規約」といいます。）は，Memo Sprout（以下，「本アプリ」といいます。）がこのウェブサイト上で
