--- a/app/views/memos/_form.html.erb
+++ b/app/views/memos/_form.html.erb
@@ -3,67 +3,55 @@
 
 <!-- 感情に応じたキーワード -->
 <% selected_emotion = emotion_options.find { |_, value| value == @memo.emotion } %>
-<% if selected_emotion %>
-  <div class="emotion-keywords mt-8">
-    <p><%= selected_emotion[0] %></p>
-  </div>
-<% end %>
-<!-- について、一つずつ掘り下げてみましょう -->
-<%= simple_format (t('memos._form.before')) %>
-
-<%= form_with model: @memo, url: form_url, data: { turbo: false } do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-  <%= f.hidden_field :emotion, value: @memo.emotion %> <!-- フォームに感情を隠しフィールドで渡す -->
-
-  <!-- いつ -->
-  <div class="my-8 sm:my-16">
-    <label class="block">
-      <%= t('memos._form.when') %>（When）
-    </label>
-    <%= f.date_field :date, value: @memo.new_record? ? Date.today : @memo.date, class: "input input-bordered w-full max-w-xs" %>
-  </div>
-
-  <%= f.fields_for :memo_content do |key| %>
-    <!-- 何 -->
-    <div class="my-8 sm:my-16">
-      <label class="block">
-        <%= t('memos._form.what') %>（What）(*)
-      </label>
-      <%= key.text_area 'what', value: parsed_content['what'], placeholder: @memo.placeholder_for_all(:what, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
-    </div>
-
-    <!-- なぜ -->
-    <div class="my-8 sm:my-16">
-      <label class="block">
-        <%= t('memos._form.why') %>(Why)(*)
-      </label>
-      <%= key.text_area 'why', value: parsed_content['why'], placeholder: @memo.placeholder_for_all(:why, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
-    </div>
-
-    <!-- なぜをもっと深掘り -->
-    <div class="my-8 sm:my-16">
-      <label class="block">
-        <%= t('memos._form.why_more') %>(*)
-      </label>
-      <%= key.text_area 'why_more', value: parsed_content['why_more'], placeholder: @memo.placeholder_for_all(:why_more, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
-    </div>
-
-    <!-- どのように -->
-    <div class="my-8 sm:my-16">
-      <label class="block">
-        <%= t('memos._form.how') %>(How)(*)
-      </label>
-      <%= key.text_area 'how', value: parsed_content['how'],  placeholder: @memo.placeholder_for_all(:how, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
-    </div>
-
-    <!-- まとめ・気付き -->
-    <div class="my-8 sm:my-16">
-      <label class="block">
-        <%= t('memos._form.summary') %>(*)
-      </label>
-      <%= key.text_area 'summary', value: parsed_content['summary'], placeholder: @memo.placeholder_for_all(:summary, @memo.emotion), class: "input input-bordered w-full max-w-xs h-32" %>
+  <% if selected_emotion %>
+    <div class="emotion-keywords mt-8">
+      <p><%= selected_emotion[0] %></p>
     </div>
   <% end %>
+  <!-- について、一つずつ掘り下げてみましょう -->
+  <%= simple_format (t('memos._form.before')) %>
+
+  <%= form_with model: @memo, url: form_url, data: { turbo: false } do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+    <%= f.hidden_field :emotion, value: @memo.emotion %> <!-- フォームに感情を隠しフィールドで渡す -->
+
+    <!-- いつ -->
+    <div class="my-8 sm:my-16">
+      <%= f.label :date, "#{t('memos._form.when')}（When）", class: "block" %>
+      <%= f.date_field :date, value: @memo.new_record? ? Date.today : @memo.date, class: "input input-bordered w-full max-w-xs" %>
+    </div>
+
+    <%= f.fields_for :memo_content do |key| %>
+      <!-- 何 -->
+      <div class="my-8 sm:my-16">
+        <%= key.label :what, "#{t('memos._form.what')}（What）(*)", class: "block" %>
+        <%= key.text_area :what, value: parsed_content['what'], placeholder: @memo.placeholder_for_all(:what, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
+      </div>
+
+      <!-- なぜ -->
+      <div class="my-8 sm:my-16">
+        <%= key.label :why, "#{t('memos._form.why')}(Why)(*)", class: "block" %>
+        <%= key.text_area :why, value: parsed_content['why'], placeholder: @memo.placeholder_for_all(:why, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
+      </div>
+
+      <!-- なぜをもっと深掘り -->
+      <div class="my-8 sm:my-16">
+        <%= key.label :why_more, "#{t('memos._form.why_more')}(*)", class: "block" %>
+        <%= key.text_area :why_more, value: parsed_content['why_more'], placeholder: @memo.placeholder_for_all(:why_more, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
+      </div>
+
+      <!-- どのように -->
+      <div class="my-8 sm:my-16">
+        <%= key.label :how, "#{t('memos._form.how')}(How)(*)", class: "block" %>
+        <%= key.text_area :how, value: parsed_content['how'],  placeholder: @memo.placeholder_for_all(:how, @memo.emotion), class: "input input-bordered w-full max-w-xs" %>
+      </div>
+
+      <!-- まとめ・気付き -->
+      <div class="my-8 sm:my-16">
+        <%= key.label :summary, "#{t('memos._form.summary')}(*)", class: "block" %>
+        <%= key.text_area :summary, value: parsed_content['summary'], placeholder: @memo.placeholder_for_all(:summary, @memo.emotion), class: "input input-bordered w-full max-w-xs h-32" %>
+      </div>
+    <% end %>
 
   <%= f.submit @memo.new_record? ? t('memos._form.confirm') : t('memos._form.update'), class: "btn btn-error mb-8" %>
 <% end %>
